--- a/Remake Vlisex/tsconfig.node.json
+++ b/Remake Vlisex/tsconfig.node.json
@@ -4,7 +4,9 @@
     "skipLibCheck": true,
     "module": "ESNext",
     "moduleResolution": "bundler",
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": ".",
+    "paths": { "@/*": ["./src/"] }
   },
   "include": ["vite.config.ts"]
 }
